# DjangoChannelsGraphqlWs

./: pyproject.toml
channels_graphql_ws/: transport.py
tests/: test_concurrent.py  test_linters.py
